<resources>
    <string name="app_name">Money Keeper</string>
    <string name="help">Help</string>
    <string name="option">Option</string>
    <string name="sync">Sync</string>
    <string name="overview">Overview</string>
    <string name="summary">Summary</string>
    <string name="transaction">Transaction</string>
    <string name="chart">Chart</string>
    <string name="detail">Detail</string>
    <string name="category">Categories</string>
    <string name="new_transaction">New Transaction</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="expense_last_seven_days">Chi tiêu - 7 ngày gần đây</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="balance">Balance</string>
</resources>
