<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:visible="false"
        android:id="@+id/item_overview"
        android:icon="@drawable/ic_overview_black_24dp"
        android:title="@string/overview"></item>
    <item
        android:id="@+id/item_summary"
        android:icon="@drawable/ic_summary_black_24dp"
        android:title="@string/summary"></item>
    <item
        android:visible="false"
        android:id="@+id/item_transaction"
        android:icon="@drawable/ic_transaction_black_24dp"
        android:title="@string/transaction"></item>
    <item
        android:id="@+id/item_chart"
        android:icon="@drawable/ic_pie_chart_black_24dp"
        android:title="@string/chart"></item>
    <item
        android:id="@+id/item_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/setting"></item>
    <item
        android:id="@+id/item_about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/about"></item>
</menu>