<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_10">

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Tháng 3 2020"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18_title"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_10">

            <com.razerdp.widget.animatedpieview.AnimatedPieView
                android:id="@+id/chart_pie_summary"
                android:layout_width="80dp"
                android:layout_height="80dp"></com.razerdp.widget.animatedpieview.AnimatedPieView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_16"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/spacing_32">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18_title"></TextView>

                    <TextView
                        android:id="@+id/txt_income_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="123.456 đ"
                        android:textColor="@color/income_button_color"
                        android:textSize="@dimen/font_18_title"></TextView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/spacing_32">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18_title"></TextView>

                    <TextView
                        android:id="@+id/txt_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="-123.4566 đ"
                        android:textColor="@color/expense_button_color"
                        android:textSize="@dimen/font_18_title"></TextView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/spacing_32">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18_title"></TextView>

                    <TextView
                        android:id="@+id/txt_total_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="123.456 đ"
                        android:textSize="@dimen/font_18_title"></TextView>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>